--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "date-fns": "^3.3.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
