--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
@@ -55,6 +56,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-datepicker": "^6.0.1",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-slider": "^1.3.6",
     "@types/uuid": "^9.0.8"
   }
 }
