--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
+    "react-mobile-picker": "^1.0.0",
     "react-mui-datepicker": "^1.2.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
