--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "to-do-app-icon.png",
       "type": "image/png",
       "sizes": "192x192"
     },
